Fixed BRA-9: added rulebook index page

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -4,154 +4,9 @@
         <file>qml/MainMenu.qml</file>
         <file>qml/Rulebook.qml</file>
         <file>qml/RulebookHeader.qml</file>
+        <file>qml/RulebookIndex.qml</file>
         <file>qml/components/WebViewSearch.qml</file>
         <file>fonts/MaterialIcons-Regular.ttf</file>
-        <file>pages/main.css</file>
-        <file>pages/rulebook.html</file>
-        <file>pages/findAndReplaceDOMText.js</file>
-        <file>pages/searchAPI.js</file>
-        <file>pages/vendors/normalize.css</file>
-        <file>pages/fonts/Immortal.woff</file>
-        <file>pages/fonts/RobotoCondensed-Bold.woff</file>
-        <file>pages/fonts/RobotoCondensed-BoldItalic.woff</file>
-        <file>pages/fonts/RobotoCondensed-Italic.woff</file>
-        <file>pages/fonts/RobotoCondensed-Regular.woff</file>
-        <file>pages/fonts/TrajanPro-Regular.woff</file>
-        <file>pages/fonts/TrajanPro-Bold.woff</file>
-        <file>pages/images/rulebook/main-background.jpg</file>
-        <file>pages/images/rulebook/introduction/introduction-heading.png</file>
-        <file>pages/images/rulebook/game_flow/gameflow-heading.png</file>
-        <file>pages/images/rulebook/game_flow/maintenance.jpg</file>
-        <file>pages/images/rulebook/game_flow/placeholder-volcano.png</file>
-        <file>pages/images/rulebook/game_flow/volcano.png</file>
-        <file>pages/images/rulebook/game_flow/gaining-resources-1.png</file>
-        <file>pages/images/rulebook/game_flow/gaining-resources-2.png</file>
-        <file>pages/images/rulebook/game_flow/gaining-resources-3.png</file>
-        <file>pages/images/rulebook/game_flow/gaining-resources-4.png</file>
-        <file>pages/images/rulebook/game_flow/gaining-resources-5.png</file>
-        <file>pages/images/rulebook/game_flow/building.png</file>
-        <file>pages/images/rulebook/game_flow/god-warchief.png</file>
-        <file>pages/images/rulebook/game_flow/god.png</file>
-        <file>pages/images/rulebook/game_flow/warchief.png</file>
-        <file>pages/images/rulebook/game_flow/war.png</file>
-        <file>pages/images/rulebook/game_flow/war-1.jpg</file>
-        <file>pages/images/rulebook/game_flow/war-2.jpg</file>
-        <file>pages/images/rulebook/game_flow/war-3.jpg</file>
-        <file>pages/images/rulebook/game_flow/war-4.jpg</file>
-        <file>pages/images/rulebook/game_flow/war-5.jpg</file>
-        <file>pages/images/rulebook/game_flow/war-icon-1.png</file>
-        <file>pages/images/rulebook/game_flow/war-icon-2.png</file>
-        <file>pages/images/rulebook/game_flow/war-icon-3.png</file>
-        <file>pages/images/rulebook/game_flow/war-icon-4.png</file>
-        <file>pages/images/rulebook/game_flow/barbarians-knowledge.png</file>
-        <file>pages/images/rulebook/game_flow/tactics-knowledge.png</file>
-        <file>pages/images/rulebook/game_flow/discovery-icon.png</file>
-        <file>pages/images/rulebook/game_flow/defense-icon.png</file>
-        <file>pages/images/rulebook/game_flow/economy-icon.png</file>
-        <file>pages/images/rulebook/game_flow/production-icon.png</file>
-        <file>pages/images/rulebook/game_flow/other-actions-1.png</file>
-        <file>pages/images/rulebook/game_flow/other-actions-2.png</file>
-        <file>pages/images/rulebook/game_flow/trade-1.png</file>
-        <file>pages/images/rulebook/game_flow/trade-2.png</file>
-        <file>pages/images/rulebook/game_flow/trade-3.png</file>
-        <file>pages/images/rulebook/game_flow/trade-4.png</file>
-        <file>pages/images/rulebook/game_flow/trade-5.png</file>
-        <file>pages/images/rulebook/game_flow/demon-card.jpg</file>
-        <file>pages/images/rulebook/game_flow/feast-card.jpg</file>
-        <file>pages/images/rulebook/game_flow/volcanos-example.png</file>
-        <file>pages/images/rulebook/game_end/gameend-heading.png</file>
-        <file>pages/images/rulebook/game_end/game-end.jpg</file>
-        <file>pages/images/rulebook/variant/variant-heading.png</file>
-        <file>pages/images/rulebook/variant/blue-bear.png</file>
-        <file>pages/images/rulebook/variant/green-horse.png</file>
-        <file>pages/images/rulebook/variant/red-tiger.png</file>
-        <file>pages/images/rulebook/variant/yellow-wolf.png</file>
-        <file>pages/images/rulebook/components/components-heading.png</file>
-        <file>pages/images/rulebook/components/c-banners.png</file>
-        <file>pages/images/rulebook/components/c-buildings-cards.png</file>
-        <file>pages/images/rulebook/components/c-champions.png</file>
-        <file>pages/images/rulebook/components/c-colored-bases.png</file>
-        <file>pages/images/rulebook/components/c-conquer-tiles.png</file>
-        <file>pages/images/rulebook/components/c-demons-cards.png</file>
-        <file>pages/images/rulebook/components/c-domination-point.png</file>
-        <file>pages/images/rulebook/components/c-feast-cards.png</file>
-        <file>pages/images/rulebook/components/c-gameboard.png</file>
-        <file>pages/images/rulebook/components/c-gods-cards.png</file>
-        <file>pages/images/rulebook/components/c-honor-track.png</file>
-        <file>pages/images/rulebook/components/c-knowledge.png</file>
-        <file>pages/images/rulebook/components/c-map.png</file>
-        <file>pages/images/rulebook/components/c-player-gameboard.png</file>
-        <file>pages/images/rulebook/components/c-region-cards.png</file>
-        <file>pages/images/rulebook/components/c-resource-tokens.png</file>
-        <file>pages/images/rulebook/components/c-tokens.png</file>
-        <file>pages/images/rulebook/components/c-troops.png</file>
-        <file>pages/images/rulebook/components/c-volcano.png</file>
-        <file>pages/images/rulebook/components/c-warchiefs-cards.png</file>
-        <file>pages/images/rulebook/expansion/expansion-heading.png</file>
-        <file>pages/images/rulebook/expansion/hunt-heading.png</file>
-        <file>pages/images/rulebook/expansion/expansion-setup-1.jpg</file>
-        <file>pages/images/rulebook/expansion/expansion-setup-2.jpg</file>
-        <file>pages/images/rulebook/expansion/expansion-setup-3.png</file>
-        <file>pages/images/rulebook/expansion/expansion-setup-4.jpg</file>
-        <file>pages/images/rulebook/expansion/war-glacier.png</file>
-        <file>pages/images/rulebook/expansion/war-forest.png</file>
-        <file>pages/images/rulebook/expansion/war-mountain.png</file>
-        <file>pages/images/rulebook/expansion/skullcrusher.png</file>
-        <file>pages/images/rulebook/expansion/hunt.jpg</file>
-        <file>pages/images/rulebook/expansion/beast-glacier.png</file>
-        <file>pages/images/rulebook/expansion/beast-forest.png</file>
-        <file>pages/images/rulebook/expansion/beast-mountain.png</file>
-        <file>pages/images/rulebook/expansion/beast-glacier-swamp.png</file>
-        <file>pages/images/rulebook/expansion/beast-forest-swamp.png</file>
-        <file>pages/images/rulebook/expansion/beast-mountain-swamp.png</file>
-        <file>pages/images/rulebook/expansion/beasts-example.jpg</file>
-        <file>pages/images/rulebook/expansion/monsters-example.jpg</file>
-        <file>pages/images/rulebook/expansion/additional-heading.png</file>
-        <file>pages/images/rulebook/expansion/personal-example-1.jpg</file>
-        <file>pages/images/rulebook/expansion/personal-example-2.jpg</file>
-        <file>pages/images/rulebook/expansion/personal-example-3.jpg</file>
-        <file>pages/images/rulebook/expansion/personal-example-4.jpg</file>
-        <file>pages/images/rulebook/expansion/personal-example-5.jpg</file>
-        <file>pages/images/rulebook/expansion/special-buildings-1.jpg</file>
-        <file>pages/images/rulebook/expansion/special-buildings-2.jpg</file>
-        <file>pages/images/rulebook/expansion/special-buildings-3.jpg</file>
-        <file>pages/images/rulebook/expansion/special-buildings-4.jpg</file>
-        <file>pages/images/rulebook/expansion/demons-feasts-1.jpg</file>
-        <file>pages/images/rulebook/expansion/demons-feasts-2.jpg</file>
-        <file>pages/images/rulebook/expansion/oneplayer-heading.png</file>
-        <file>pages/images/rulebook/expansion/prephase.jpg</file>
-        <file>pages/images/rulebook/expansion_components/expansion-components-heading.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-alternative-volcano.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-add-building-cards.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-add-demons-cards.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-add-feast-cards.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-alternative-map.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-beast-cards.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-fate-cards.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-hunts.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-ks-map.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-magma-tokens.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-milestone-tokens.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-monster-cards.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-oneplayer-rulebook.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-personal-obj.png</file>
-        <file>pages/images/rulebook/expansion_components/ce-skullcrashers.png</file>
-        <file>pages/images/rulebook/reference/reference-heading.png</file>
-        <file>pages/images/rulebook/reference/arrow.png</file>
-        <file>pages/images/rulebook/reference/building-card.png</file>
-        <file>pages/images/rulebook/reference/crown.png</file>
-        <file>pages/images/rulebook/reference/domination-points.png</file>
-        <file>pages/images/rulebook/reference/resources.png</file>
-        <file>pages/images/rulebook/reference/shield.png</file>
-        <file>pages/images/rulebook/reference/slash.png</file>
-        <file>pages/images/rulebook/reference/troops.png</file>
-        <file>pages/images/rulebook/reference/volcano.png</file>
-        <file>pages/images/rulebook/reference/god-warchief-card.png</file>
-        <file>pages/images/rulebook/reference/demons-1.jpg</file>
-        <file>pages/images/rulebook/reference/demons-2.jpg</file>
-        <file>pages/images/rulebook/reference/demons-3.jpg</file>
-        <file>pages/images/rulebook/reference/demons-4.jpg</file>
-        <file>pages/images/rulebook/credits/divider.png</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
