--- a/src/music.qrc
+++ b/src/music.qrc
@@ -1,7 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>music/song1.mp3</file>
-        <file>music/song2.mp3</file>
-        <file>music/song3.mp3</file>
+        <file>music/barbaricoro.mp3</file>
+        <file>music/barbarimarcia2.mp3</file>
     </qresource>
 </RCC>
