All artwork compressed because the iOS binary exceeded the maximum size (60MB)

--- a/src/artwork.qrc
+++ b/src/artwork.qrc
@@ -34,8 +34,8 @@
         <file>artwork/region-glacier.jpg</file>
         <file>artwork/sketch-arswaed@2x.jpg</file>
         <file>artwork/sketch-arswaed.jpg</file>
-        <file>artwork/sketch-berserker@2x.png</file>
-        <file>artwork/sketch-berserker.png</file>
+        <file>artwork/sketch-berserker@2x.jpg</file>
+        <file>artwork/sketch-berserker.jpg</file>
         <file>artwork/sketch-fhafnir@2x.jpg</file>
         <file>artwork/sketch-fhafnir.jpg</file>
         <file>artwork/warchief-luathan@2x.jpg</file>
