--- a/src/android/res/values/styles.xml
+++ b/src/android/res/values/styles.xml
@@ -1,10 +1,16 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="SplashTheme" parent="@android:style/Theme.NoTitleBar">
         <!-- this is set to windowBackground instead of background as a workaround
              on Android 8.0, otherwise splash screen do not disappear -->
         <item name="android:windowBackground">@drawable/splash</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">false</item>
-        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor" tools:targetApi="21">@color/status</item>
+        <item name="android:navigationBarColor" tools:targetApi="21">@color/status</item>
+    </style>
+
+    <style name="BarbariansTheme" parent="@android:style/Theme.Holo.Light">
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor" tools:targetApi="21">@color/status</item>
+        <item name="android:navigationBarColor" tools:targetApi="21">@color/status</item>
     </style>
 </resources>
